# gmath

./: .gitignore  CMakeLists.txt  README.md
src/: gm_vec3.c  gm_vec3.h
