cmake_minimum_required(VERSION 3.7.1)
set(CMAKE_C_STANDARD 99)

project(gmath)

set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

file(
	GLOB SOURCES
	${SRC_DIR}/gm_vec3.c
)

add_library(
	${PROJECT_NAME}
	${SOURCES}
)

target_include_directories(
	${PROJECT_NAME}
	PUBLIC
	${SRC_DIR}
)

set_target_properties(
	${PROJECT_NAME}
    PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
